--- a/book_private.html
+++ b/book_private.html
@@ -5,17 +5,17 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="renderer" content="webkit">
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-		<title>隐私政策</title>
-		<meta name="description" content="软件“隐私政策”在线一键生成，APP“隐私政策”在线一键生成">
-		<meta name="keywords" content="APP“隐私政策”生成器">
-		<meta http-equiv="Cache-Control" content="no-siteapp">
-				<link href="./书迷手册_隐私政策_files/puyuetian.min.css" rel="stylesheet">
-		<script src="./书迷手册_隐私政策_files/jquery-3.6.0.min.js"></script>
-		<script src="./书迷手册_隐私政策_files/jquery.qrcode.min.js"></script>
-		<script src="./书迷手册_隐私政策_files/puyuetian.min.js"></script>
-		<script src="./书迷手册_隐私政策_files/puyuetian.ssx.min.js"></script>
-		<script src="./书迷手册_隐私政策_files/FileSaver.min.js"></script>
-				<script src="./书迷手册_隐私政策_files/puyuetian(1).min.js"></script>
+            <title>Privacy Policy</title>
+            <meta name="description" content="Generate software 'Privacy Policy' online with one click, generate app 'Privacy Policy' online with one click.">
+            <meta name="keywords" content="App Privacy Policy Generator">
+            <meta http-equiv="Cache-Control" content="no-siteapp">
+            <link href="./书迷手册_隐私政策_files/puyuetian.min.css" rel="stylesheet">
+            <script src="./书迷手册_隐私政策_files/jquery-3.6.0.min.js"></script>
+            <script src="./书迷手册_隐私政策_files/jquery.qrcode.min.js"></script>
+            <script src="./书迷手册_隐私政策_files/puyuetian.min.js"></script>
+            <script src="./书迷手册_隐私政策_files/puyuetian.ssx.min.js"></script>
+            <script src="./书迷手册_隐私政策_files/FileSaver.min.js"></script>
+            <script src="./书迷手册_隐私政策_files/puyuetian(1).min.js"></script>
 		<script>
 		    K.isTool=true;
 		    K.uploadURL="upload";
@@ -782,61 +782,75 @@
 	}
 </style>
 <div class="pk-container" style="background-color:#fff;padding:0 15px">
-	<div class="title">书迷手册 隐私政策</div>
-	<div class="content">
-		<p>书迷手册尊重并保护所有使用本软件的用户的个人隐私权。为了给您提供更准确、更有个性化的服务，书迷手册会按照本隐私权政策的规定使用和披露您的个人信息。但书迷手册将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，书迷手册不会将这些信息对外披露或向第三方提供。书迷手册会不时更新本隐私权政策。</p>
-		<p>您在同意书迷手册络服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于书迷手册络服务使用协议不可分割的一部分。</p>
-		<p>另外，您需要承诺在您开始使用本产品时已经是成年人、如果您是未成年人，需要您的监护人同意您使用本产品并同意相关的服务条款和隐私政策。</p>
-		<p class="pk-text-bold">1.怎样收集并使用您的信息（包括个人信息）</p>
-		<p>个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息，其中属于个人敏感信息的包括个人生物识别信息（例如指纹、面部、声纹）、身份证件号码、银行账号、财产信息、交易信息、行踪轨迹（例如居住和办公地址）等。</p>
-		<p>我们只会以该声明中所列出的目的，来收集和使用您的信息：</p>
-		<p><b>a)</b> 拨打电话与发送信息：书迷手册为了能够实现拨打电话以及发送信息的功能，我们需要收集您的以下信息：通讯录中的联系人姓名、假名化后的设备标识符、移动网络代码和移动设备国家代码。您的联系人的组别属性、名称以及电话号码仅存储在本地进行处理，不会上传到服务器。</p>
-		<p><b>b)</b> 查询天气和预约任务：书迷手册为了能够实现查询天气和预约任务中跟地点相关的功能，我们需要收集您的地理位置信息，包括但不限于：当前位置、常访问位置、居住地址以及办公/学习位置。</p>
-		<p><b>c)</b> 查询与设置日程：书迷手册为了能够实现查询与设置日程的功能，我们需要收集并处理您的日历信息。该信息的收集和处理仅在本地完成，用于查询和设置您的日程。</p>
-		<p><b>d)</b> 调用第三方应用：为了提供更为丰富的服务，书迷手册会通过云端与第三方应用开放接入接口。由三方服务方应用为您提供相应的服务（例如：导航、订机变等》、我们会将第三方服务方/应用所需要的信息提供给对方 包括但不限于：语音识别结果（文字信息》、位宜信息。（在使用的功能涉及第三方时 可能会跳转到第三方应用或网站上，我们强烈建议您仔经阅读该第一方的服务条款和隐私政策 因为我们无法控制象三方应用或网站，也不为第三方损害您的权益承担任何责任。）</p>
-		<p class="pk-text-bold">2.保留政策与数据存储</p>
-		<p>如果有必要实现收集信息的目的 或者逆守适用法律要求或者允许，我们将一直保留个人信息，只要能够合理断出保留个人信息无法实现收生 信息的目的，我们将不会再保留个人信息，或者会消除将个人信息和特定个人关联在一起的途径。</p>
-		<p><b>a)</b> 数据存储地点：我们在本产品和服务中所收集和产生的个人信息，将存储在中华人民共和国境内。</p>
-		<p><b>b)</b> 数据存储期限：我们仅为实现上述目的所需要的时间来保留您的个人信息，并在超出保留时间后劃際或匿名化处理您的个入信息：但法律法规另有要求的除外。（另外 如果我们的产品或服务发生了停止运营的情况时，我们将以推送通知 公告等形式告知您 开仕台理的期限内删除您的个人信息或进行匿名化处理。）</p>
-		<p class="pk-text-bold">3.适用范围</p>
-		<p><b>a)</b> 在您注册书迷手册帐号时，您根据书迷手册要求提供的个人注册信息（商家应法律法规要求需公示的企业名称及相关工商注册信息除外）；</p>
-		<p><b>b)</b> 在您使用书迷手册网络服务，或访问书迷手册平台网页时，书迷手册自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>
-		<p><b>c)</b> 书迷手册通过合法途径从商业伙伴处取得的用户个人数据。</p>
-		<p class="pk-text-bold">您了解并同意，以下信息不适用本隐私权政策：</p>
-		<p><b>a)</b> 您在使用书迷手册平台提供的搜索服务时输入的关键字信息；</p>
-		<p><b>b)</b> 书迷手册收集到的您在书迷手册发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；</p>
-		<p><b>c)</b> 违反法律规定或违反书迷手册规则行为及书迷手册已对您采取的措施。</p>
-		<p class="pk-text-bold">4.信息使用</p>
-		<p><b>a)</b> 书迷手册不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和书迷手册（含书迷手册关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。</p>
-		<p><b>b)</b> 书迷手册亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何书迷手册平台用户如从事上述活动，一经发现，书迷手册有权立即终止与该用户的服务协议。</p>
-		<p><b>c)</b> 为服务用户的目的，书迷手册可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与书迷手册合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。</p>
-		<p class="pk-text-bold">5.信息披露</p>
-		<p>在如下情况下，书迷手册将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：</p>
-		<p><b>a)</b> 经您事先同意，向第三方披露；</p>
-		<p><b>b)</b> 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；</p>
-		<p><b>c)</b> 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；</p>
-		<p><b>d)</b> 如您出现违反中国有关法律、法规或者书迷手册服务协议或相关规则的情况，需要向第三方披露；</p>
-		<p><b>e)</b> 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；</p>
-		<p><b>f)</b> 在书迷手册平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，书迷手册有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。</p>
-		<p><b>g)</b> 其它书迷手册根据法律、法规或者网站政策认为合适的披露。</p>
-		<p class="pk-text-bold">6.信息存储和交换</p>
-		<p>书迷手册收集的有关您的信息和资料将保存在书迷手册及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或书迷手册收集信息和资料所在地的境外并在境外被访问、存储和展示。</p>
-		<p class="pk-text-bold">7. Cookie的使用</p>
-		<p><b>a)</b> 在您未拒绝接受cookies的情况下，书迷手册会在您的计算机上设定或取用cookies，以便您能登录或使用依赖于cookies的书迷手册平台服务或功能。书迷手册使用cookies可为您提供更加周到的个性化服务，包括推广服务。</p>
-		<p><b>b)</b> 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的书迷手册网络服务或功能。</p>
-		<p><b>c)</b> 通过书迷手册所设cookies所取得的有关信息，将适用本政策。</p>
-		<p class="pk-text-bold">8.信息安全</p>
-		<p><b>a)</b> 书迷手册帐号均有安全保护功能，请妥善保管您的用户名及密码信息。书迷手册将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。</p>
-		<p><b>b)</b> 在使用书迷手册网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是书迷手册用户名及密码发生泄露，请您立即联络书迷手册客服，以便书迷手册采取相应措施。</p>
-		<p class="pk-text-bold">9.获取的权限及说明</p>
-        <p><b>a)</b> 获取设备信息（IMEI标识/MAC地址/网络状态）权限：用于账号的登录及注册功能；</p>
-        <p><b>b)</b> 访问您设备上的照片、媒体内容和文件权限：存储及读取程序的缓存内容和账号信息数据；</p>
-        <p><b>c)</b> 拨打电话和管理通话权限：用于联系客服（拨打客服电话）功能；</p>
-        <p><b>d)</b> 拍摄照片及录制视频权限：用户用户头像上传功能；</p>
-        <p class="pk-text-bold">10.账号的注销</p>
-        <p>用户可以联系客服申请注销自己的账号服务，账号注销操作不可逆，我们将会在3个工作日内完成注销。</p>
-        <p class="pk-text-bold">11.更新说明</p>
-		<p>书迷手册保留随时更新本声明的权利，当声明发生修改时，我们会通过连窗或通知的方式告知您变更后的声明。如您继续使用我们的服务，即视为您同意我们的变更后的隙私政策我们才会按照更新的声明收集、使用、存储您的个人信息。</p>
+    <div class="title">Reader Handbook Handbook Privacy Policy</div>
+    <div class="content">
+      <p>Reader Handbook Handbook respects and protects the personal privacy rights of all users of this software. To provide you with more accurate and personalized services, Reader Handbook Handbook will use and disclose your personal information in accordance with this Privacy Policy. However, Reader Handbook Handbook will treat this information with a high degree of diligence and care. Unless otherwise stated in this policy, we will not disclose your information to any third party without your prior permission. Reader Handbook Handbook may update this policy from time to time.</p>
+      <p>By agreeing to the Reader Handbook Handbook Service Agreement, you are deemed to have accepted all contents of this Privacy Policy. This Privacy Policy is an integral part of the Reader Handbook Handbook Service Agreement.</p>
+      <p>You must also confirm that you are an adult when using this product. If you are a minor, your guardian must consent to your use of this product and agree to the relevant terms of service and privacy policy.</p>
+
+      <p class="pk-text-bold">1. How We Collect and Use Your Information (Including Personal Information)</p>
+      <p>Personal information refers to various types of information recorded electronically or otherwise that can identify a specific natural person, either alone or in combination with other data. Sensitive personal information may include biometric data (such as fingerprints, facial features, voiceprints), ID numbers, bank account details, financial and transaction data, and location information (e.g., home or work address).</p>
+      <p>We only collect and use your information for the purposes listed in this statement:</p>
+      <p><b>a)</b> Making calls and sending messages: To enable these functions, we collect contact names from your address book, anonymized device identifiers, mobile network codes, and country codes. Contact group attributes, names, and phone numbers are processed locally and never uploaded.</p>
+      <p><b>b)</b> Weather queries and task appointments: We collect your location information to enable these features, including but not limited to: current location, frequently visited places, home and work/study locations.</p>
+      <p><b>c)</b> Calendar access: To query and manage your schedule, we collect and process your calendar data locally, without uploading it.</p>
+      <p><b>d)</b> Third-party app integration: To offer richer services, we may connect with third-party apps via cloud APIs. If a third-party service is needed (e.g., navigation or ticket booking), we may share necessary data such as voice recognition results or location information. If redirected to a third-party service, please read their terms and privacy policy carefully, as we are not responsible for their practices.</p>
+
+      <p class="pk-text-bold">2. Data Retention and Storage</p>
+      <p>We retain personal information as long as necessary to fulfill the purposes for which it was collected or as required by law. Once no longer needed, we will delete or anonymize the data.</p>
+      <p><b>a)</b> Storage location: Personal information collected in this product is stored within the territory of the People's Republic of China.</p>
+      <p><b>b)</b> Retention period: We retain your personal data only for the duration needed to fulfill the purposes described. After that, we will delete or anonymize it unless required otherwise by law. If our product or service is discontinued, we will notify you and delete or anonymize your data within a reasonable time.</p>
+
+      <p class="pk-text-bold">3. Scope of Application</p>
+      <p><b>a)</b> When registering an account, you may provide registration information (excluding business registration details required by law).</p>
+      <p><b>b)</b> When using our services or visiting our website, we may collect browser and device information, such as IP address, browser type, language, access time, and requested pages.</p>
+      <p><b>c)</b> We may also legally obtain personal data from partners.</p>
+
+      <p class="pk-text-bold">You understand and agree that the following information is not covered by this Privacy Policy:</p>
+      <p><b>a)</b> Keywords entered while using the app’s search feature;</p>
+      <p><b>b)</b> Information related to public posts or participation in activities on our platform;</p>
+      <p><b>c)</b> Any violations of laws or platform rules and actions taken against such behavior.</p>
+
+      <p class="pk-text-bold">4. Use of Information</p>
+      <p><b>a)</b> We do not sell, rent, or share your personal information with unrelated third parties without your consent, except when cooperating with affiliates to provide services. Such parties will be restricted from accessing the data after the service ends.</p>
+      <p><b>b)</b> We prohibit third parties from collecting, editing, selling, or distributing your information. If any user engages in such activity, we may terminate their access immediately.</p>
+      <p><b>c)</b> To better serve you, we may use your personal data to provide information you may be interested in, or share it with our partners (with your consent) for marketing purposes.</p>
+
+      <p class="pk-text-bold">5. Disclosure of Information</p>
+      <p>We may disclose your personal data under the following circumstances:</p>
+      <p><b>a)</b> With your prior consent;</p>
+      <p><b>b)</b> As necessary to provide requested services;</p>
+      <p><b>c)</b> As required by law or governmental authorities;</p>
+      <p><b>d)</b> If you violate laws or our terms and policies;</p>
+      <p><b>e)</b> If you are involved in a legal complaint, we may disclose relevant data to the involved party;</p>
+      <p><b>f)</b> In a transaction dispute, we may provide necessary contact details to facilitate resolution;</p>
+      <p><b>g)</b> Any other disclosures deemed appropriate by law or platform policy.</p>
+
+      <p class="pk-text-bold">6. Information Storage and Transfer</p>
+      <p>Your information will be stored on servers controlled by us or our affiliates and may be transferred and accessed globally according to applicable laws.</p>
+
+      <p class="pk-text-bold">7. Use of Cookies</p>
+      <p><b>a)</b> We use cookies to support login and personalized services. Cookies help improve user experience.</p>
+      <p><b>b)</b> You can disable cookies via browser settings, but doing so may limit certain features.</p>
+      <p><b>c)</b> Information collected via cookies will be handled in accordance with this policy.</p>
+
+      <p class="pk-text-bold">8. Information Security</p>
+      <p><b>a)</b> Your account is protected by password encryption. Please keep your login credentials secure. We employ standard security measures, but note that no system is 100% secure.</p>
+      <p><b>b)</b> During online transactions, you may share personal info with the other party. Please be cautious and only share when necessary. If your info is leaked, contact us immediately so we can assist.</p>
+
+      <p class="pk-text-bold">9. Permissions and Their Use</p>
+      <p><b>a)</b> Device Info (IMEI/MAC/Network Status): Used for login and registration;</p>
+      <p><b>b)</b> Access to photos, media, and files: For caching and user data storage;</p>
+      <p><b>c)</b> Phone call and call log access: For contacting customer support;</p>
+      <p><b>d)</b> Camera access: For uploading avatars.</p>
+
+      <p class="pk-text-bold">10. Account Deletion</p>
+      <p>You may request account deletion by contacting customer service. This action is irreversible and will be completed within 3 business days.</p>
+
+      <p class="pk-text-bold">11. Updates</p>
+      <p>We reserve the right to update this policy at any time. If changes occur, we will notify you via pop-up or announcement. Continued use of our services indicates your acceptance of the updated terms.</p>
+    </div>
+
 		<p class="pk-text-right" style="margin-top:40px"></p>
 		<p class="pk-text-right"></p>
 	</div>
