--- a/book_private.html
+++ b/book_private.html
@@ -782,10 +782,10 @@
 	}
 </style>
 <div class="pk-container" style="background-color:#fff;padding:0 15px">
-    <div class="title">Reader Handbook Handbook Privacy Policy</div>
+    <div class="title">Reader Handbook Privacy Policy</div>
     <div class="content">
-      <p>Reader Handbook Handbook respects and protects the personal privacy rights of all users of this software. To provide you with more accurate and personalized services, Reader Handbook Handbook will use and disclose your personal information in accordance with this Privacy Policy. However, Reader Handbook Handbook will treat this information with a high degree of diligence and care. Unless otherwise stated in this policy, we will not disclose your information to any third party without your prior permission. Reader Handbook Handbook may update this policy from time to time.</p>
-      <p>By agreeing to the Reader Handbook Handbook Service Agreement, you are deemed to have accepted all contents of this Privacy Policy. This Privacy Policy is an integral part of the Reader Handbook Handbook Service Agreement.</p>
+      <p>Reader Handbook respects and protects the personal privacy rights of all users of this software. To provide you with more accurate and personalized services, Reader Handbook will use and disclose your personal information in accordance with this Privacy Policy. However, Reader Handbook will treat this information with a high degree of diligence and care. Unless otherwise stated in this policy, we will not disclose your information to any third party without your prior permission. Reader Handbook may update this policy from time to time.</p>
+      <p>By agreeing to the Reader Handbook Service Agreement, you are deemed to have accepted all contents of this Privacy Policy. This Privacy Policy is an integral part of the Reader Handbook Service Agreement.</p>
       <p>You must also confirm that you are an adult when using this product. If you are a minor, your guardian must consent to your use of this product and agree to the relevant terms of service and privacy policy.</p>
 
       <p class="pk-text-bold">1. How We Collect and Use Your Information (Including Personal Information)</p>
